{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 265,
  "lineage": "36157270-00c7-3552-d7fb-667bcb54ba3f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "google_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897701442878:internet-gateway/igw-0ebedc17608d52b6c",
            "id": "igw-0ebedc17608d52b6c",
            "owner_id": "897701442878",
            "tags": {
              "Name": "zometo-dev_igw"
            },
            "vpc_id": "vpc-03c2731e0d686bf68"
          },
          "dependencies": [
            "aws_vpc.google"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "google_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:897701442878:loadbalancer/app/zometo-dev/682b72edeb645d59",
            "arn_suffix": "app/zometo-dev/682b72edeb645d59",
            "dns_name": "zometo-dev-1087805080.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:897701442878:loadbalancer/app/zometo-dev/682b72edeb645d59",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "zometo-dev",
            "security_groups": [
              "sg-0fc5e9c5d657a4d27"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01223052d61aba0c4"
              },
              {
                "subnet_id": "subnet-04a2944c6800daa0f"
              },
              {
                "subnet_id": "subnet-0fbc300a54c659634"
              }
            ],
            "subnets": [
              "subnet-01223052d61aba0c4",
              "subnet-04a2944c6800daa0f",
              "subnet-0fbc300a54c659634"
            ],
            "vpc_id": "vpc-03c2731e0d686bf68",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.google_alb__sg",
            "aws_subnet.google_public_a",
            "aws_subnet.google_public_b",
            "aws_subnet.google_public_c",
            "aws_vpc.google"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:897701442878:listener/app/zometo-dev/682b72edeb645d59/69e94e6c5d433c52",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:897701442878:targetgroup/zometo-dev-tg1/368c550a9bca74d1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:897701442878:listener/app/zometo-dev/682b72edeb645d59/69e94e6c5d433c52",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:897701442878:loadbalancer/app/zometo-dev/682b72edeb645d59",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.google_alb",
            "aws_lb_target_group.google_tg1",
            "aws_security_group.google_alb__sg",
            "aws_subnet.google_public_a",
            "aws_subnet.google_public_b",
            "aws_subnet.google_public_c",
            "aws_vpc.google"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "google_tg1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:897701442878:targetgroup/zometo-dev-tg1/368c550a9bca74d1",
            "arn_suffix": "targetgroup/zometo-dev-tg1/368c550a9bca74d1",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:897701442878:targetgroup/zometo-dev-tg1/368c550a9bca74d1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "zometo-dev-tg1",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03c2731e0d686bf68"
          },
          "dependencies": [
            "aws_vpc.google"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "google_public_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-005d05cdc79ac44c7",
            "owner_id": "897701442878",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ebedc17608d52b6c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "zometo-dev_public_route"
            },
            "vpc_id": "vpc-03c2731e0d686bf68"
          },
          "dependencies": [
            "aws_internet_gateway.google_igw",
            "aws_vpc.google"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01910097e4d4ed3b3",
            "route_table_id": "rtb-005d05cdc79ac44c7",
            "subnet_id": "subnet-04a2944c6800daa0f"
          },
          "dependencies": [
            "aws_internet_gateway.google_igw",
            "aws_route_table.google_public_route",
            "aws_subnet.google_public_a",
            "aws_vpc.google"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b98cc6c61cba556",
            "route_table_id": "rtb-005d05cdc79ac44c7",
            "subnet_id": "subnet-0fbc300a54c659634"
          },
          "dependencies": [
            "aws_internet_gateway.google_igw",
            "aws_route_table.google_public_route",
            "aws_subnet.google_public_b",
            "aws_vpc.google"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b5a17416334ab2f",
            "route_table_id": "rtb-005d05cdc79ac44c7",
            "subnet_id": "subnet-01223052d61aba0c4"
          },
          "dependencies": [
            "aws_internet_gateway.google_igw",
            "aws_route_table.google_public_route",
            "aws_subnet.google_public_c",
            "aws_vpc.google"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_instance_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897701442878:security-group/sg-0726b90264da89975",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0726b90264da89975",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs_instance_sg",
            "name_prefix": null,
            "owner_id": "897701442878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zometo-dev_ecs_instance_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c2731e0d686bf68"
          },
          "dependencies": [
            "aws_vpc.google"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "google_alb__sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897701442878:security-group/sg-0fc5e9c5d657a4d27",
            "description": "Allow traffic from Internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc5e9c5d657a4d27",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "google_alb__sg",
            "name_prefix": null,
            "owner_id": "897701442878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zometo-dev_alb__sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c2731e0d686bf68"
          },
          "dependencies": [
            "aws_vpc.google"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "google_private_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897701442878:subnet/subnet-051edb093261417fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-051edb093261417fd",
            "map_public_ip_on_launch": false,
            "owner_id": "897701442878",
            "tags": {
              "Name": "zometo-dev_private_a"
            },
            "vpc_id": "vpc-03c2731e0d686bf68"
          },
          "dependencies": [
            "aws_vpc.google"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "google_private_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897701442878:subnet/subnet-012808d9d18710a6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-012808d9d18710a6e",
            "map_public_ip_on_launch": false,
            "owner_id": "897701442878",
            "tags": {
              "Name": "zometo-dev_private_b"
            },
            "vpc_id": "vpc-03c2731e0d686bf68"
          },
          "dependencies": [
            "aws_vpc.google"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "google_private_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897701442878:subnet/subnet-0b1e34e7eec67b5f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "192.168.5.0/24",
            "id": "subnet-0b1e34e7eec67b5f6",
            "map_public_ip_on_launch": false,
            "owner_id": "897701442878",
            "tags": {
              "Name": "zometo-dev_private_c"
            },
            "vpc_id": "vpc-03c2731e0d686bf68"
          },
          "dependencies": [
            "aws_vpc.google"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "google_public_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897701442878:subnet/subnet-04a2944c6800daa0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-04a2944c6800daa0f",
            "map_public_ip_on_launch": true,
            "owner_id": "897701442878",
            "tags": {
              "Name": "zometo-dev_public_a"
            },
            "vpc_id": "vpc-03c2731e0d686bf68"
          },
          "dependencies": [
            "aws_vpc.google"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "google_public_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897701442878:subnet/subnet-0fbc300a54c659634",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0fbc300a54c659634",
            "map_public_ip_on_launch": true,
            "owner_id": "897701442878",
            "tags": {
              "Name": "zometo-dev_public_b"
            },
            "vpc_id": "vpc-03c2731e0d686bf68"
          },
          "dependencies": [
            "aws_vpc.google"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "google_public_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897701442878:subnet/subnet-01223052d61aba0c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-01223052d61aba0c4",
            "map_public_ip_on_launch": true,
            "owner_id": "897701442878",
            "tags": {
              "Name": "zometo-dev_public_c"
            },
            "vpc_id": "vpc-03c2731e0d686bf68"
          },
          "dependencies": [
            "aws_vpc.google"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "google",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:897701442878:vpc/vpc-03c2731e0d686bf68",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0638c2309132fa94a",
            "default_route_table_id": "rtb-0b909f86bd1b9a9bf",
            "default_security_group_id": "sg-07a35bc15b99d9072",
            "dhcp_options_id": "dopt-d89e40b3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03c2731e0d686bf68",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b909f86bd1b9a9bf",
            "owner_id": "897701442878",
            "tags": {
              "Name": "zometo-dev"
            }
          }
        }
      ]
    }
  ]
}